# Symptom-ai-v1

./: Dockerfile  README.md  index.html  inference.py  openenv.yaml  pyproject.toml
server/: app.py  auth.py  database.py  models.py  symptom_env.py
